--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,8 @@ h1 {
     display:flex;
     align-items:center;
     margin:10px 0;
+    /* background-color: red; */
+    
 }
 .cart--item img {
     width:40px;
@@ -278,12 +280,15 @@ h1 {
     flex:1;
 }
 .cart--item--qtarea {
+    margin-left: auto;    
     display:inline-flex;
     background-color:#EEE;
     border-radius:10px;
     height:30px;
 }
 .cart--item--qtarea button {
+    background-color: red;
+
     border:0;
     background-color:transparent;
     font-size:17px;
